// https://github.com/grpc/grpc/blob/master/doc/health-checking.md
syntax = "proto3";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service Health {
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
